Fixed draggable overlap

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -43,6 +43,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5fbff', end
 
 .single-menu {
 	margin-bottom: 80px;
+}
+
+#menu-list {
 	z-index: -1;
 }
 
